[package]
name = "hlight-dump"
version = "0.0.0"
edition = "2021"
authors = ["Moe <m@tmoe.me>"]
categories = ["command-line-utilities", "encoding"]
readme = "Readme.md"
repository = "https://github.com/2moe/hlight"
license = "Apache-2.0"
description = "Dump the theme/syntax set of an old version of Sublime as binary data"


[dependencies]
getset = "0.1.2"
log = "0.4.18"
once_cell = "1.17.1"

[dependencies.syntect]
version = "5.0.0"
default-features = false
features = ["parsing", "regex-fancy"]
