[package]
name = "hlight"
version = "0.0.1-alpha.1"
edition = "2021"
authors = ["Moe <m@tmoe.me>"]
keywords = ["syntax", "highlighting"]
categories = ["text-processing"]
readme = "Readme.md"
repository = "https://github.com/2moe/hlight"
license = "Apache-2.0"
description = "This library is dedicated to delivering exceptional syntax highlighting capabilities."

[lib]
path = "src/lib.rs"


[features]
default = ["preset-syntax-set", "preset-theme-set"]
preset-syntax-set = []
preset-theme-set = []
# log = ["dep:log"]

[dependencies]
getset = "0.1.2"
log = "0.4.18"
once_cell = "1.17.1"

[dependencies.syntect]
version = "5.0.0"
default-features = false
features = ["parsing", "regex-fancy"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "__hlight_doc"]
